--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "description": "social network for developer",
     "main": "server.js",
     "scripts": {
-        "start": "node server", 
-        "server": "nodemon server"
+        "start": "node server",
+        "server": "nodemon server",
+        "client": "npm start --prefix client",
+        "dev": "concurrently \"npm run server\" \"npm run client\" "
     },
     "repository": {
         "type": "git",
